raffia/tests/error/declaration/important-in-function.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ important-in-function.css:2:23
  │
2 │   color: red if(true, !important, null);
  │                       ^


